# openGL-practice

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
Engine/Platform/OpenGL/: GLObject.cpp  GLObject.h  GLShader.cpp  GLShader.h  GLVertex.cpp  GLVertex.h
Engine/Renderer/: Shader.cpp  Shader.h  Window.cpp  Window.h
res/shaders/: base.glsl
